--- a/packages/SystemUI/res/values/aospa_strings.xml
+++ b/packages/SystemUI/res/values/aospa_strings.xml
@@ -46,4 +46,10 @@
     <!-- Name of the VoWiFi status bar icon. -->
     <string name="status_bar_vowifi">VoWiFi</string>
 
+    <!-- Name of the nfc status bar icon. -->
+    <string name="status_bar_nfc">NFC</string>
+
+    <!-- Accessibility label for nfc icon (not shown on screen) [CHAR LIMIT=NONE] -->
+    <string name="accessibility_status_bar_nfc">NFC</string>
+
 </resources>
