--- a/packages/SystemUI/res/values/aospa_strings.xml
+++ b/packages/SystemUI/res/values/aospa_strings.xml
@@ -48,4 +48,8 @@
     <!-- Name of the VoWiFi status bar icon. -->
     <string name="status_bar_vowifi">VoWiFi</string>
 
+    <!-- Data usage info in QS footer -->
+    <string name="usage_data">used today</string>
+    <string name="usage_data_default_suffix">Data</string>
+    <string name="usage_wifi_default_suffix">Wi-Fi</string>
 </resources>
